--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <title>Supply Chain App</title>
     <link rel="stylesheet" type="text/css" href="index.css">
-    <!-- Include web3.js library -->
+    
     <script src="https://cdn.jsdelivr.net/npm/web3@1.6.0/dist/web3.min.js"></script>
   </head>
   <body>
@@ -184,9 +184,9 @@
       ];
 
       // Contract address
-      const contractAddress = "0x5dAE688D04e7099738302B3a012Bd1E01FC999Fb"; // Replace with your contract address
+      const contractAddress = "0x54605CFA61d5AC1f4bB1D6Da885eAC5109D830E8"; 
 
-      // Create a contract instance
+      
       const supplyChainContract = new web3.eth.Contract(
         contractABI,
         contractAddress
